# .dotfiles

./: .gitignore  .gitmodules  README.org  configuration.nix  devenv.nix  devenv.yaml  flake.nix  pyproject.toml
emacs/: config.el  config.org  config.org~  early-init.el  init.el
emacs/eshell/: aliases
emacs/lsp-bridge-config/langserver/: ltex-ls-plus.json
emacs/lsp-bridge-config/multiserver/: latex_ltex.json  latex_ltex2.json
niri/: config.kdl
nix-config/: flake.nix  nix.org
nix-config-org/: flake.nix  nix.org
nix-config-org/fern/: configuration.nix  home.nix
nix-config-org/modules/: common-packages.nix
nix-config-org/nix-wsl/: configuration.nix
nix-config-org/nixos/: configuration.nix  home.nix
nix-config-org/t490/: configuration.nix  hardware-configuration.nix
nix-config/annie/: configuration.nix  home.nix
nix-config/fern/: configuration.nix  home.nix
nix-config/ino/: configuration.nix  hardware-configuration.nix
nix-config/modules/: common-packages.nix  gui-packages.nix
nix-config/nixos/: configuration.nix  home.nix
nix-config/nyx/: configuration.nix  hardware-configuration.nix  home.nix
nix-config/raven/: home.nix
nix-config/vultr/: configuration.nix  hardware-configuration.nix  home.nix
nix-devices-config/: flake.nix
nix-wsl/: configuration.nix  flake.nix  home.nix
noctalia/: plugins.json  settings.json  user-templates.toml
profiles/personal/: configuration.nix
profiles/t490/: configuration.nix  home.nix
python_helpers/: mistral.org
vicinae/: settings.json
wlr-which-key/: config.yaml
(+6 files in other folders)
