[project]
name = "dotfiles-env"
version = "0.1.0"
description = ""
authors = [
    {name = "Omang Baheti",email = "omangbaheti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "mistralai (>=1.10.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "experiment-server (>=0.3.6,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
