[project]
name = "dotfiles-env"
version = "0.1.0"
description = ""
authors = [
    {name = "Omang Baheti",email = "omangbaheti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "mistralai (>=1.10.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "experiment-server (>=0.3.6,<0.4.0)",
    "mistral (>=21.0.0,<22.0.0)",
    "epc (>=0.0.5,<0.0.6)",
    "pyqt6 (>=6.10.2,<7.0.0)",
    "pyqt6-sip (>=13.11.1,<14.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "inflect (>=7.5.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
